# utci

./: LICENCE  LICENSE.md  README.md  pyproject.toml
utci/: __init__.py  calculate_utci.py  utci_function.py
